tests/baselines/reference/augmentedTypesClass2a.errors.txt
==== tests/cases/compiler/augmentedTypesClass2a.ts (2 errors) ====
    //// class then function
    class c2 { public foo() { } }
    function c2() { } // error
             ~~
!!! augmentedTypesClass2a.ts(3,10): error TS2000: Duplicate identifier 'c2'. Additional locations:
!!! 	augmentedTypesClass2a.ts(2,1)
    var c2 = () => { }
        ~~
!!! augmentedTypesClass2a.ts(4,5): error TS2000: Duplicate identifier 'c2'. Additional locations:
!!! 	augmentedTypesClass2a.ts(2,1)